527 - fix display issues on small card w/bg

--- a/web/themes/gesso/source/03-components/card/card--small-bio/_card--small-bio.scss
+++ b/web/themes/gesso/source/03-components/card/card--small-bio/_card--small-bio.scss
@@ -4,6 +4,7 @@
 
 .c-card.c-card--small-bio {
   .c-card__media {
+    aspect-ratio: 1;
     color: gesso-color(text, on-dark);
     display: flex;
     flex-direction: column;
@@ -37,6 +38,15 @@
 
     a:not(.external-link) {
       @include arrow-link(red);
+    }
+
+    a {
+      text-decoration-line: none;
+
+      &:hover,
+      &:focus {
+        text-decoration-line: underline;
+      }
     }
   }
 
